# dense-ev

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py_  tox.ini
.github/workflows/: tests.yml
src/: .pylintrc  __init__.py  myrandom.py  tox.ini
src/dense_ev/: _test_ops.py  decompose_pauli.py  dense_grouper.py  dense_pauli_basis_change.py  dense_pauli_expectation.py  estimator_from_aer.py  rmatrix.py  test_estimator.py  test_ops.py
src/tests/: test_random.py
tests/: test_random.py
