[project]
name = "dense_ev"
version = "2023.05.22"
description = "Qiskit expectation values using optimal dense grouping."
readme = "README.md"
authors = [
    {name = "Andrew Lytle", email="atlytle@illinois.edu"},
]
dependencies = [
    "qiskit",
    "psfam"
]
license = {file = "LICENSE.txt"}

[project.urls]
"Homepage" = "https://github.com/atlytle/dense-ev"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
